// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`module APIs 1`] = `
Object {
  "compiler": [Function],
  "configurator": [Function],
  "webpack": [Function],
}
`;

exports[`webpack compiler 1`] = `
"/******/ (() => { // webpackBootstrap
/******/ 	\\"use strict\\";
/******/ 	var __webpack_modules__ = ({

/***/ \\"lodash\\":
/*!*************************!*\\\\
  !*** external \\"lodash\\" ***!
  \\\\*************************/
/***/ ((module) => {

module.exports = require(\\"lodash\\");

/***/ })

/******/ 	});
/************************************************************************/
/******/ 	// The module cache
/******/ 	var __webpack_module_cache__ = {};
/******/ 	
/******/ 	// The require function
/******/ 	function __webpack_require__(moduleId) {
/******/ 		// Check if module is in cache
/******/ 		var cachedModule = __webpack_module_cache__[moduleId];
/******/ 		if (cachedModule !== undefined) {
/******/ 			return cachedModule.exports;
/******/ 		}
/******/ 		// Create a new module (and put it into the cache)
/******/ 		var module = __webpack_module_cache__[moduleId] = {
/******/ 			// no module.id needed
/******/ 			// no module.loaded needed
/******/ 			exports: {}
/******/ 		};
/******/ 	
/******/ 		// Execute the module function
/******/ 		__webpack_modules__[moduleId](module, module.exports, __webpack_require__);
/******/ 	
/******/ 		// Return the exports of the module
/******/ 		return module.exports;
/******/ 	}
/******/ 	
/************************************************************************/
/******/ 	/* webpack/runtime/define property getters */
/******/ 	(() => {
/******/ 		// define getter functions for harmony exports
/******/ 		__webpack_require__.d = (exports, definition) => {
/******/ 			for(var key in definition) {
/******/ 				if(__webpack_require__.o(definition, key) && !__webpack_require__.o(exports, key)) {
/******/ 					Object.defineProperty(exports, key, { enumerable: true, get: definition[key] });
/******/ 				}
/******/ 			}
/******/ 		};
/******/ 	})();
/******/ 	
/******/ 	/* webpack/runtime/hasOwnProperty shorthand */
/******/ 	(() => {
/******/ 		__webpack_require__.o = (obj, prop) => (Object.prototype.hasOwnProperty.call(obj, prop))
/******/ 	})();
/******/ 	
/******/ 	/* webpack/runtime/make namespace object */
/******/ 	(() => {
/******/ 		// define __esModule on exports
/******/ 		__webpack_require__.r = (exports) => {
/******/ 			if(typeof Symbol !== 'undefined' && Symbol.toStringTag) {
/******/ 				Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });
/******/ 			}
/******/ 			Object.defineProperty(exports, '__esModule', { value: true });
/******/ 		};
/******/ 	})();
/******/ 	
/************************************************************************/
var __webpack_exports__ = {};
// This entry need to be wrapped in an IIFE because it need to be isolated against other modules in the chunk.
(() => {
/*!****************************************!*\\\\
  !*** ./mocks/jade-component/server.js ***!
  \\\\****************************************/
__webpack_require__.r(__webpack_exports__);
/* harmony export */ __webpack_require__.d(__webpack_exports__, {
/* harmony export */   \\"data\\": () => (/* binding */ data)
/* harmony export */ });
const _ = __webpack_require__(/*! lodash */ \\"lodash\\");

const data = (context, callback) => {
  return callback(null, {});
};
})();

module.exports = __webpack_exports__;
/******/ })()
;
//# sourceMappingURL=server.js.map"
`;

exports[`webpack compiler 2`] = `
Object {
  "file": "server.js",
  "mappings": "dummy",
  "names": Array [],
  "sourceRoot": "",
  "sources": Array [
    "external commonjs2 \\"lodash\\"",
    "/path/to/component/server.js",
    "webpack/runtime/define property getters",
    "webpack/runtime/hasOwnProperty shorthand",
    "webpack/runtime/make namespace object",
    "/mocks/jade-component/mocks/jade-component/server.js",
  ],
  "sourcesContent": Array [
    "module.exports = require(\\"lodash\\");",
    "// The module cache
var __webpack_module_cache__ = {};

// The require function
function __webpack_require__(moduleId) {
	// Check if module is in cache
	var cachedModule = __webpack_module_cache__[moduleId];
	if (cachedModule !== undefined) {
		return cachedModule.exports;
	}
	// Create a new module (and put it into the cache)
	var module = __webpack_module_cache__[moduleId] = {
		// no module.id needed
		// no module.loaded needed
		exports: {}
	};

	// Execute the module function
	__webpack_modules__[moduleId](module, module.exports, __webpack_require__);

	// Return the exports of the module
	return module.exports;
}

",
    "// define getter functions for harmony exports
__webpack_require__.d = (exports, definition) => {
	for(var key in definition) {
		if(__webpack_require__.o(definition, key) && !__webpack_require__.o(exports, key)) {
			Object.defineProperty(exports, key, { enumerable: true, get: definition[key] });
		}
	}
};",
    "__webpack_require__.o = (obj, prop) => (Object.prototype.hasOwnProperty.call(obj, prop))",
    "// define __esModule on exports
__webpack_require__.r = (exports) => {
	if(typeof Symbol !== 'undefined' && Symbol.toStringTag) {
		Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });
	}
	Object.defineProperty(exports, '__esModule', { value: true });
};",
    "const _ = require('lodash');

export const data = (context, callback) => {
  return callback(null, {});
};
",
  ],
  "version": 3,
}
`;

exports[`webpack compiler verbose 1`] = `"(()=>{\\"use strict\\";var e={793:e=>{e.exports=require(\\"lodash\\")}},r={};function o(t){var n=r[t];if(void 0!==n)return n.exports;var a=r[t]={exports:{}};return e[t](a,a.exports,o),a.exports}o.d=(e,r)=>{for(var t in r)o.o(r,t)&&!o.o(e,t)&&Object.defineProperty(e,t,{enumerable:!0,get:r[t]})},o.o=(e,r)=>Object.prototype.hasOwnProperty.call(e,r),o.r=e=>{\\"undefined\\"!==typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:\\"Module\\"}),Object.defineProperty(e,\\"__esModule\\",{value:!0})};var t={};(()=>{o.r(t),o.d(t,{data:()=>e});o(793);const e=(e,r)=>r(null,{})})(),module.exports=t})();"`;

exports[`webpack compiler with fatal error 1`] = `"This is a fatal compilation error"`;

exports[`webpack configurator with production=false 1`] = `
Object {
  "bail": false,
  "devtool": "cheap-module-source-map",
  "entry": "/path/to/server.js",
  "externals": Array [
    [Function],
    /\\^\\[a-z@\\]\\[a-z\\\\-\\\\/0-9\\\\\\.\\]\\+\\$/i,
  ],
  "mode": "development",
  "module": Object {
    "rules": Array [
      Object {
        "exclude": /node_modules/,
        "test": /\\\\\\.js\\$/,
        "use": Array [
          Object {
            "loader": "../../../node_modules/babel-loader/lib/index.js",
            "options": Object {
              "babelrc": false,
              "cacheDirectory": true,
              "presets": Array [
                Array [
                  "../../../node_modules/babel-preset-env/lib/index.js",
                  Object {
                    "modules": false,
                    "targets": Object {
                      "node": 12,
                    },
                  },
                ],
              ],
              "retainLines": true,
              "sourceMaps": true,
              "sourceRoot": "/path/to",
            },
          },
        ],
      },
    ],
  },
  "optimization": Object {
    "minimize": false,
    "minimizer": Array [
      TerserPlugin {
        "options": Object {
          "exclude": undefined,
          "extractComments": true,
          "include": undefined,
          "minimizer": Object {
            "implementation": [Function],
            "options": Object {
              "compress": Object {
                "comparisons": false,
                "ecma": 5,
                "inline": 2,
                "warnings": false,
              },
              "keep_classnames": false,
              "keep_fnames": false,
              "mangle": Object {
                "safari10": true,
              },
              "output": Object {
                "ascii_only": true,
                "comments": false,
                "ecma": 5,
              },
              "parse": Object {
                "ecma": 8,
              },
            },
          },
          "parallel": true,
          "test": /\\\\\\.\\[cm\\]\\?js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
        },
      },
    ],
  },
  "output": Object {
    "devtoolFallbackModuleFilenameTemplate": "[absolute-resource-path]?[contenthash]",
    "devtoolModuleFilenameTemplate": "[absolute-resource-path]",
    "filename": "server.js",
    "libraryTarget": "commonjs2",
    "path": "/path/to/build",
  },
  "plugins": Array [
    DefinePlugin {
      "definitions": Object {
        "process.env.NODE_ENV": "\\"development\\"",
      },
    },
  ],
  "stats": "errors-only",
  "target": "node",
}
`;

exports[`webpack configurator with production=true 1`] = `
Object {
  "bail": true,
  "devtool": false,
  "entry": "/path/to/server.js",
  "externals": Array [
    [Function],
    /\\^\\[a-z@\\]\\[a-z\\\\-\\\\/0-9\\\\\\.\\]\\+\\$/i,
  ],
  "mode": "production",
  "module": Object {
    "rules": Array [
      Object {
        "exclude": /node_modules/,
        "test": /\\\\\\.js\\$/,
        "use": Array [
          Object {
            "loader": "../../infinite-loop-loader/index.js",
          },
          Object {
            "loader": "../../../node_modules/babel-loader/lib/index.js",
            "options": Object {
              "babelrc": false,
              "cacheDirectory": true,
              "presets": Array [
                Array [
                  "../../../node_modules/babel-preset-env/lib/index.js",
                  Object {
                    "modules": false,
                    "targets": Object {
                      "node": 12,
                    },
                  },
                ],
              ],
              "retainLines": true,
              "sourceMaps": false,
              "sourceRoot": "/path/to",
            },
          },
        ],
      },
    ],
  },
  "optimization": Object {
    "minimize": true,
    "minimizer": Array [
      TerserPlugin {
        "options": Object {
          "exclude": undefined,
          "extractComments": true,
          "include": undefined,
          "minimizer": Object {
            "implementation": [Function],
            "options": Object {
              "compress": Object {
                "comparisons": false,
                "ecma": 5,
                "inline": 2,
                "warnings": false,
              },
              "keep_classnames": false,
              "keep_fnames": false,
              "mangle": Object {
                "safari10": true,
              },
              "output": Object {
                "ascii_only": true,
                "comments": false,
                "ecma": 5,
              },
              "parse": Object {
                "ecma": 8,
              },
            },
          },
          "parallel": true,
          "test": /\\\\\\.\\[cm\\]\\?js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
        },
      },
    ],
  },
  "output": Object {
    "devtoolFallbackModuleFilenameTemplate": "[absolute-resource-path]?[contenthash]",
    "devtoolModuleFilenameTemplate": "[absolute-resource-path]",
    "filename": "server.js",
    "libraryTarget": "commonjs2",
    "path": "/path/to/build",
  },
  "plugins": Array [
    DefinePlugin {
      "definitions": Object {
        "process.env.NODE_ENV": "\\"production\\"",
      },
    },
  ],
  "stats": "errors-only",
  "target": "node",
}
`;
